// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenizedExpression should render: 1 + Sum(2 + Total) 1`] = `
<span
  className="Expression-node Expression-group"
>
  <span
    className="Expression-node Expression-token"
  >
    1
  </span>
  <span
    className="Expression-node Expression-token"
  >
     
  </span>
  <span
    className="Expression-node Expression-token"
  >
    +
  </span>
  <span
    className="Expression-node Expression-token"
  >
     
  </span>
  <span
    className="Expression-node Expression-aggregation Expression-tokenized"
  >
    <span
      className="Expression-node Expression-function-name"
    >
      Sum
    </span>
    <span
      className="Expression-node Expression-group"
    >
      <span
        className="Expression-node Expression-open-paren"
      >
        (
      </span>
      <span
        className="Expression-node Expression-token"
      >
        2
      </span>
      <span
        className="Expression-node Expression-token"
      >
         
      </span>
      <span
        className="Expression-node Expression-token"
      >
        +
      </span>
      <span
        className="Expression-node Expression-token"
      >
         
      </span>
      <span
        className="Expression-node Expression-dimension Expression-tokenized"
      >
        <span
          className="Expression-node Expression-identifier"
        >
          <span
            className="Expression-node Expression-token"
          >
            Total
          </span>
        </span>
      </span>
      <span
        className="Expression-node Expression-close-paren"
      >
        )
      </span>
    </span>
  </span>
</span>
`;

exports[`TokenizedExpression should render: Count 1`] = `
<span
  className="Expression-node Expression-group"
>
  <span
    className="Expression-node Expression-dimension Expression-tokenized"
  >
    <span
      className="Expression-node Expression-identifier"
    >
      <span
        className="Expression-node Expression-token"
      >
        Count
      </span>
    </span>
  </span>
</span>
`;

exports[`TokenizedExpression should render: Sum("Foo Bar") 1`] = `
<span
  className="Expression-node Expression-group"
>
  <span
    className="Expression-node Expression-aggregation Expression-tokenized"
  >
    <span
      className="Expression-node Expression-function-name"
    >
      Sum
    </span>
    <span
      className="Expression-node Expression-group"
    >
      <span
        className="Expression-node Expression-open-paren"
      >
        (
      </span>
      <span
        className="Expression-node Expression-dimension Expression-tokenized"
      >
        <span
          className="Expression-node Expression-identifier-string"
        >
          "Foo Bar"
        </span>
      </span>
      <span
        className="Expression-node Expression-close-paren"
      >
        )
      </span>
    </span>
  </span>
</span>
`;

exports[`TokenizedExpression should render: Sum(Subtotal) 1`] = `
<span
  className="Expression-node Expression-group"
>
  <span
    className="Expression-node Expression-aggregation Expression-tokenized"
  >
    <span
      className="Expression-node Expression-function-name"
    >
      Sum
    </span>
    <span
      className="Expression-node Expression-group"
    >
      <span
        className="Expression-node Expression-open-paren"
      >
        (
      </span>
      <span
        className="Expression-node Expression-dimension Expression-tokenized"
      >
        <span
          className="Expression-node Expression-identifier"
        >
          <span
            className="Expression-node Expression-token"
          >
            Subtotal
          </span>
        </span>
      </span>
      <span
        className="Expression-node Expression-close-paren"
      >
        )
      </span>
    </span>
  </span>
</span>
`;
